<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#78909C"
        android:textSize="25sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/loginSenha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColorHint="#78909C"
        android:textSize="25sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/signUpCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/signUpCall"/>

</LinearLayout>